# windows-mouse-wheel-accelerator

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
