[package]
name = "windows-mouse-wheel-accelerator"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.57.0", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Direct3D9",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem"
] }
ctrlc = "3.4"

[profile.release]
opt-level = 3
lto = true
